# twilight-interactions

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yaml
examples/: Cargo.toml  README.md
examples/xkcd-bot/: api.rs  main.rs  process.rs
examples/xkcd-bot/interactions/: command.rs  mod.rs
twilight-interactions/: Cargo.toml
twilight-interactions-derive/: Cargo.toml
twilight-interactions-derive/src/: attributes.rs  command_model.rs  create_command.rs  fields.rs  lib.rs  localization.rs  parse.rs
twilight-interactions-derive/src/command/: attributes.rs  command_model.rs  create_command.rs  description.rs  fields.rs  impls.rs  mod.rs  user_application.rs
twilight-interactions-derive/src/command/model/: command_model.rs  create_command.rs  mod.rs  parse.rs
twilight-interactions-derive/src/command/subcommand/: command_model.rs  create_command.rs  mod.rs  parse.rs
twilight-interactions-derive/src/command_model/: mod.rs
twilight-interactions-derive/src/modal/: create_modal.rs  impls.rs  mod.rs  modal_model.rs  parse.rs
twilight-interactions-derive/src/option/: attributes.rs  command_option.rs  create_option.rs  mod.rs  parse.rs  variants.rs
twilight-interactions-derive/src/parse/: attribute.rs  mod.rs  old.rs  parsers.rs  syntax.rs
twilight-interactions/src/: command_model.rs  command_option.rs  create_option.rs  error.rs  lib.rs
twilight-interactions/src/command/: command_model.rs  create_command.rs  internal.rs  localizations.rs  mod.rs
twilight-interactions/src/modal/: create_modal.rs  mod.rs  modal_model.rs
twilight-interactions/tests/: autocomplete.rs  choice_option.rs  command_model.rs  create_command.rs  create_modal.rs  localizations.rs  modal_model.rs  model.rs  option_locales.rs  subcommand.rs
