[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"
license = "ISC"

[dev-dependencies]
anyhow = "1"
futures-util = { version = "0.3", default-features = false }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "fmt", "ansi"], default-features = false }

twilight-interactions = { path = "../twilight-interactions"}
twilight-gateway = "0.15.2"
twilight-http = "0.15.2"
twilight-model = "0.15.2"
twilight-util = { version = "0.15.2", features = ["builder"] }

serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }

[[example]]
name = "xkcd-bot"
path = "xkcd-bot/main.rs"
