[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"
license = "ISC"

[dev-dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }

futures-util = { version = "0.3", default-features = false }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "fmt", "ansi"], default-features = false }

twilight-gateway = "0.15.2"
twilight-http = "0.15.2"
twilight-interactions = { path = "../twilight-interactions" }
twilight-model = "0.15.2"
twilight-util = { version = "0.15.2", features = ["builder"] }

[[example]]
name = "xkcd-bot"
path = "xkcd-bot/main.rs"
