[package]
name = "twilight-interactions-derive"
version = "0.14.4"
description = "Macros and utilities to make Discord Interactions easy to use with Twilight."
categories = ["parsing", "config", "asynchronous"]
keywords = ["twilight", "discord", "slash-command"]
authors = ["baptiste0928"]
readme = "README.md"
homepage = "https://github.com/baptiste0928/twilight-interactions#readme"
repository = "https://github.com/baptiste0928/twilight-interactions"
documentation = "https://docs.rs/twilight-interactions"
edition = "2021"
rust-version = "1.60"
license = "ISC"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"
