[package]
name = "twilight-interactions"
version = "0.12.0"
description = "Macros and utilities to make Discord Interactions easy to use with Twilight."
categories = ["parsing", "config", "asynchronous"]
keywords = ["twilight", "discord", "slash-command"]
authors = ["baptiste0928"]
readme = "README.md"
homepage = "https://github.com/baptiste0928/twilight-interactions#readme"
repository = "https://github.com/baptiste0928/twilight-interactions"
documentation = "https://docs.rs/twilight-interactions"
edition = "2021"
rust-version = "1.60"
license = "ISC"
include = ["src/**/*", "README.md"]

[features]
default = ["derive"]
derive = ["twilight-interactions-derive"]

[dependencies]
twilight-model = { version = "0.13" }
twilight-interactions-derive = { version = "=0.12.0", path = "../twilight-interactions-derive", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
